--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -61,8 +61,12 @@
   height: 70vh;
 }
 
+.height-30 {
+  height: 29vh;
+}
+
 .width {
-  width: 100vh;
+  width: 100%;
 }
 
 .text-align-center {
@@ -73,6 +77,13 @@
   width: 80%;
   padding: 12px;
   border-radius: 5px;
+  border-color: silver;
+  border-style: solid;
+  box-shadow: 0 4px 2px -2px gray;
+}
+
+.team-search-bar:focus {
+  outline: #015291;
   border-color: #015291;
 }
 
@@ -87,7 +98,34 @@
 
 .fa-magnifying-glass {
   position: absolute;
-  top: 242px;
-  right: 160px;
+  top: 49%;
+  right: 12%;
   color: #015291;
+}
+
+.menu-button {
+  border: none;
+  background-color: #015291;
+}
+
+.team-search-button {
+  border: none;
+  background-color: #f7f7f7;
+}
+
+.fifa-logo {
+  background-image: url("/images/fifa-logo.jpg");
+  width: 10%;
+}
+
+.wrapped {
+  flex-wrap: wrap;
+}
+
+.ai-flex-end {
+  align-items: flex-end;
+}
+
+i {
+  cursor: pointer;
 }
