--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -133,9 +133,9 @@ i {
 }
 
 .team-image {
-  width: 72%;
+  width: 100%;
   margin-top: 1em;
-  margin-left: 6em;
+  height: 75vh;
 }
 
 .stadium-image {
@@ -145,6 +145,19 @@ i {
 }
 
 .team-info {
-  font-weight: bold;
+  font-weight: bolder;
   color: #015291;
+}
+
+.add-team {
+  background-color: #f7f7f7;
+  color: #015291;
+  padding: 8px 16px;
+  border-radius: 3px;
+  margin-bottom: 1em;
+  font-size: 15px;
+  font-weight: bold;
+  border: 2px solid #015291;
+  cursor: pointer;
+  box-shadow: 1px 1px 2px gray;
 }
