feature 2 almost done.

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -6,6 +6,10 @@
   flex-basis: 100%;
 }
 
+.col-100-50 {
+  flex-basis: 100%;
+}
+
 @media screen and (min-width: 768px) {
   .col-100-40 {
     flex-basis: 45%;
@@ -14,5 +18,9 @@
   .col-100-20 {
     flex-basis: 10%;
     align-self: center;
+  }
+
+  .col-100-50 {
+    flex-basis: 50%;
   }
 }
