--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -27,6 +27,10 @@
   justify-content: center;
 }
 
+.col-50 {
+  flex-basis: 50%;
+}
+
 .col-75 {
   flex-basis: 75%;
 }
@@ -208,8 +212,83 @@ ul {
 
 .team-list-logo {
   max-width: 70%;
+  padding-bottom: 0.5em;
 }
 
 img {
   object-fit: contain;
+}
+
+.fa-xmark {
+  position: absolute;
+  top: 4px;
+  right: 7px;
+  color: white;
+}
+
+.x-mark-button {
+  border: none;
+  background: none;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -170%);
+  background-color: #015291;
+  border-radius: 5px;
+  z-index: 1;
+  height: 23%;
+  width: 55%;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-shadow: 0 4px 2px -2px black;
+  border: 1px solid white;
+}
+
+.column-full {
+  flex-basis: 100%;
+}
+
+.modal-text-format {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+  font-weight: lighter;
+}
+
+.yes-button {
+  background-color: white;
+  color: green;
+  border: none;
+  padding: 3px 20px;
+  border-radius: 12px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 2em;
+  box-shadow: 0 4px 2px -2px black;
+}
+
+.no-button {
+  background-color: white;
+  color: red;
+  border: none;
+  padding: 3px 20px;
+  border-radius: 12px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 2em;
+  box-shadow: 0 4px 2px -2px black;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(0 0 0 / 60%);
+  z-index: 1;
 }
