--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -43,6 +43,17 @@
   flex-basis: 100%;
 }
 
+.col-70 {
+  flex-basis: 70%;
+  height: 100vh;
+}
+
+.col-30 {
+  flex-basis: 30%;
+  height: 100vh;
+  background-color: #f7f7f7;
+}
+
 .jc-end {
   justify-content: flex-end;
 }
@@ -291,4 +302,28 @@ img {
   left: 0;
   background-color: rgb(0 0 0 / 60%);
   z-index: 1;
+}
+
+.blue-menu-header {
+  background-color: #015291;
+  height: 50px;
+  color: white;
+  padding-top: 0.5em;
+  padding-left: 0.3em;
+}
+
+.menu-text {
+  margin: 0;
+}
+
+.team-search-link {
+  padding-left: 0.3em;
+  color: #015291;
+  font-weight: bold;
+}
+
+.team-watchlist-link {
+  padding-left: 0.3em;
+  color: #015291;
+  font-weight: bold;
 }
