--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -378,6 +378,7 @@ img {
 
 .season-team-logo {
   width: 60%;
+  max-height: 430px;
 }
 
 .player-list-text {
@@ -400,6 +401,7 @@ img {
   padding-top: 1em;
   padding-bottom: 1em;
   max-height: 500px;
+  object-fit: contain;
 }
 
 .white-outline {
