worked on getting menu to transition nicer, put on back burner for now.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -522,3 +522,12 @@ season-select-input:focus {
   color: blue;
   cursor: pointer;
 }
+
+.menu-transition {
+  transform: translateY(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.menu-hidden {
+  transform: translateY(-100%);
+}
