completed create account, log in, and sign-out features. need to work on cleaning things up on next branch, like only showing one userId's entries. committing, pushing, and pulling for a checkpoint.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -531,3 +531,7 @@ season-select-input:focus {
 .menu-hidden {
   transform: translateY(-100%);
 }
+
+.box-shadow {
+  box-shadow: 0 4px 2px -2px black;
+}
