--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -325,7 +325,7 @@ img {
   height: 50px;
   color: white;
   padding-top: 0.5em;
-  padding-left: 1.5em;
+  padding-left: 0.5em;
 }
 
 .menu-text {
@@ -539,4 +539,17 @@ season-select-input:focus {
 
 .box-shadow {
   box-shadow: 0 4px 2px -2px gray;
+}
+
+.input-error-message {
+  color: red;
+}
+
+.padding {
+  padding-left: 1.4em;
+  padding-right: 1.4em;
+}
+
+.green {
+  color: green;
 }
