completed error-handling.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -553,3 +553,12 @@ season-select-input:focus {
 .green {
   color: green;
 }
+
+.not-found-text {
+  color: #015291;
+}
+
+.not-found-return {
+  color: blue;
+  text-decoration: none;
+}
