--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -62,6 +62,12 @@
   flex-basis: 40%;
   height: 100vh;
   background-color: #f7f7f7;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.col-40.open {
+  transform: translateX(0);
 }
 
 .col-10 {
@@ -318,6 +324,11 @@ img {
   left: 0;
   background-color: rgb(0 0 0 / 60%);
   z-index: 1;
+  visibility: hidden;
+}
+
+.overlay.visible {
+  visibility: visible;
 }
 
 .blue-menu-header {
@@ -535,6 +546,7 @@ season-select-input:focus {
 
 .menu-hidden {
   transform: translateY(-100%);
+  display: none;
 }
 
 .box-shadow {
