completed css-touch-ups. ready to deploy.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -409,7 +409,6 @@ img {
 .player-list-text {
   color: white;
   font-size: 16px;
-  font-weight: bold;
 }
 
 .player-list-photo {
@@ -445,7 +444,6 @@ img {
 
 .player-stats {
   color: white;
-  font-weight: bold;
   margin-left: 0.5em;
 }
 
@@ -558,8 +556,8 @@ season-select-input:focus {
 }
 
 .padding {
-  padding-left: 1.4em;
-  padding-right: 1.4em;
+  padding-left: 1.425em;
+  padding-right: 1.425em;
 }
 
 .green {
@@ -573,4 +571,13 @@ season-select-input:focus {
 .not-found-return {
   color: blue;
   text-decoration: none;
+}
+
+li {
+  transform: scale(0.95);
+  transition: transform 0.5s;
+}
+
+li:hover {
+  transform: scale(1);
 }
