completed project-polish

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -576,8 +576,10 @@ season-select-input:focus {
 li {
   transform: scale(0.95);
   transition: transform 0.5s;
+  cursor: pointer;
 }
 
 li:hover {
   transform: scale(1);
+  cursor: pointer;
 }
