--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -584,3 +584,13 @@ li:hover {
   transform: scale(1);
   cursor: pointer;
 }
+
+.overlay2 {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(0 0 0 / 60%);
+  z-index: 1;
+}
