--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -65,7 +65,7 @@
   height: 100vh;
   background-color: #f7f7f7;
   transform: translateX(-100%);
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .col-40.open {
@@ -98,7 +98,7 @@
 }
 
 .height-30 {
-  height: 30vh;
+  height: 23vh;
 }
 
 .width {
@@ -110,7 +110,7 @@
 }
 
 .team-search-bar {
-  width: 82%;
+  width: 83%;
   padding: 12px;
   border-radius: 5px;
   border-color: silver;
@@ -368,14 +368,15 @@ img {
 .team-blue-background {
   background-color: #015291;
   width: 300px;
-  border-radius: 10px;
+  border-radius: 12px;
   padding: 2em 0;
+  position: relative;
 }
 
 .season-select-input {
   width: 60%;
   border-radius: 5px;
-  color: gray;
+  color: #015291;
   border-color: silver;
   border-style: solid;
   padding-top: 15px;
@@ -422,6 +423,7 @@ img {
 .player-card-blue-background {
   background-color: #015291;
   margin-top: 1em;
+  position: relative;
 }
 
 .single-player-image {
@@ -480,8 +482,8 @@ season-select-input:focus {
 
 .xmark2 {
   position: absolute;
-  top: 17.5%;
-  right: 22.3%;
+  top: 1%;
+  right: 1%;
   color: white;
   font-size: 24px;
 }
@@ -598,4 +600,38 @@ li:hover {
   left: 0;
   background-color: rgb(0 0 0 / 60%);
   z-index: 1;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.lds-dual-ring {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  color: #015291;
+}
+
+.lds-dual-ring::after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #015291 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+  color: #015291;
+}
+
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
