--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -97,6 +97,10 @@
   height: 70vh;
 }
 
+.height-100 {
+  height: 100vh;
+}
+
 .height-30 {
   height: 23vh;
 }
@@ -145,7 +149,7 @@
   border: none;
   background-color: white;
   position: absolute;
-  top: 48.8%;
+  top: 48.5%;
   right: 11%;
 }
 
@@ -254,11 +258,12 @@ img {
   object-fit: contain;
 }
 
-.fa-xmark {
+.fa-trash-can {
   position: absolute;
   top: 4px;
   right: 7px;
   color: white;
+  font-size: 20px;
 }
 
 .x-mark-button {
@@ -274,8 +279,8 @@ img {
   background-color: #015291;
   border-radius: 5px;
   z-index: 1;
-  height: 23%;
-  width: 55%;
+  height: 175px;
+  width: 300px;
   padding-left: 10px;
   padding-right: 10px;
   box-shadow: 0 4px 2px -2px black;
@@ -291,6 +296,24 @@ img {
   to {
     top: 30%;
   }
+}
+
+@keyframes slide-out {
+  from {
+    top: 30%;
+  }
+
+  to {
+    top: -200%;
+  }
+}
+
+.modal.hide {
+  animation: slide-out 0.35s forwards;
+}
+
+.hide {
+  display: none;
 }
 
 .column-full {
@@ -592,6 +615,7 @@ season-select-input:focus {
 .not-found-return {
   color: blue;
   text-decoration: none;
+  font-size: larger;
 }
 
 li {
