--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -221,6 +221,17 @@ i {
   border-radius: 10px;
 }
 
+.list-group2 {
+  list-style: none;
+  background-color: white;
+  width: 90%;
+  margin: 0 auto;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 ul {
   padding-left: 0;
   margin-top: 0;
@@ -250,7 +261,7 @@ ul {
 
 .team-list-name {
   color: white;
-  font-size: 40px;
+  font-size: 2.4em;
   font-weight: bold;
 }
 
@@ -703,7 +714,6 @@ li:hover {
   border-radius: 5px;
 }
 
-.black-border {
+.silver-border {
   border: 2px solid silver;
-  margin-top: 5px;
 }
