--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -113,18 +113,34 @@
   text-align: center;
 }
 
-.team-search-bar {
-  width: 80%;
+.team-search-bar input {
+  width: 300px;
   padding: 12px;
   border-radius: 5px;
   border-color: silver;
   border-style: solid;
   box-shadow: 0 4px 2px -2px gray;
+  background-color: white;
 }
 
-.team-search-bar:focus {
+.team-search-bar input:focus {
   outline: #015291;
   border-color: #015291;
+}
+
+.team-search-bar .dropdown-menu {
+  width: 100%;
+  background-color: white;
+  border: 2px solid #015291;
+  border-radius: 5px;
+  outline: #015291;
+}
+
+.team-search-bar .dropdown-item {
+  display: block;
+  margin-left: 0.7em;
+  text-decoration: none;
+  color: #015291;
 }
 
 .relative {
@@ -149,8 +165,8 @@
   border: none;
   background-color: white;
   position: absolute;
-  top: 48.5%;
-  right: 11%;
+  top: 34%;
+  right: 3%;
 }
 
 .fifa-logo {
