--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -139,6 +139,7 @@
 .team-search-bar .dropdown-item {
   display: block;
   margin-left: 0.7em;
+  margin-top: 0.25em;
   text-decoration: none;
   color: #015291;
 }
