--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -144,6 +144,10 @@
   color: #015291;
 }
 
+input[type="text"] {
+  font-size: 16px;
+}
+
 .relative {
   position: relative;
 }
@@ -155,7 +159,7 @@
 
 .fa-magnifying-glass {
   color: #015291;
-  font-size: 100%;
+  font-size: 16px;
 }
 
 .menu-button {
