adjusted scrollTo functionality on window to not go as low.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -174,7 +174,7 @@ input[type="password"] {
   background-color: white;
   position: absolute;
   top: 34%;
-  right: 9px;
+  right: 3%;
   z-index: 1;
 }
 
