--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -140,10 +140,14 @@
 
 .team-search-bar .dropdown-item {
   display: block;
-  margin-left: 0.7em;
-  margin-top: 0.25em;
+  padding-top: 0.25em;
+  padding-left: 0.7em;
   text-decoration: none;
   color: #015291;
+}
+
+.team-search-bar .dropdown-item:hover {
+  background-color: lightcyan;
 }
 
 input[type="text"],
